<resources>
    <string name="app_name">Interesting Notification</string>
    <string name="title_activity_maps">Map</string>
    <string name="add_friend_activity">Add Friend</string>
    <string name="notification_activity">Notification</string>
    <string name="select_poi_activity">Select point of interest</string>
    <string name="select_article_activity">Select interesting article</string>
    <string name="create_message_activity">Message</string>
    <string name="set_time_notificatinon_activity">Notification time</string>
    <string name="show_map">Show on map</string>
    <string name="show_me_on_map">Show me on map</string>
    <string name="notification">Notification</string>
    <string name="add_friend">Add friend</string>
    <string name="remove_friend">Remove friend</string>
    <string name="close_map">Close map</string>
    <string name="close_add">Close</string>
    <string name="forward">Forward</string>
    <string name="create">Create</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="search">Search</string>
    <string name="radius">Radius [m]</string>
    <string name="back">Back</string>
    <string name="show_poi_on_map">Show on map</string>
    <string name="create_own">Create own</string>
    <string name="save_add">Save</string>
    <string name="new_notification">New</string>
    <string name="position_data">%1$s : %2$s</string>
    <string name="empty_field_error">field cannot be empty</string>
    <string name="friend_added_msg">Friend is added</string>
    <string name="current_notification">Current notification</string>
    <string name="message">Message</string>
    <string name="empty_text">-----------</string>
    <string name="status">Status</string>
    <string name="items_list">Items</string>
    <string name="friends_list">Friends</string>
    <string name="poi_list">Points of interest</string>
    <string name="article_list">Articles</string>
    <string name="message_is_too_long">Message is too long</string>
</resources>
