<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.ute.culturaltip.activity.MainActivity">

    <TextView
        android:id="@+id/current_notification_status_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/current_notification_status_label"
        android:text="@string/empty_text" />

    <TextView
        android:id="@+id/current_notification_status_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/current_message_text"
        android:text="@string/status" />

    <TextView
        android:id="@+id/current_message_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/message_label"
        android:text="@string/empty_text" />

    <TextView
        android:id="@+id/current_notification_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/current_notification_label"
        android:text="@string/empty_text" />

    <Button
        android:id="@+id/close_notification_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/current_notification_status_label"
        android:layout_marginTop="35dp"
        android:text="@string/close_add" />

    <Button
        android:id="@+id/save_add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/close_notification_btn"
        android:layout_alignBottom="@+id/close_notification_btn"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/save_add" />

    <TextView
        android:id="@+id/current_notification_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/current_notification" />

    <TextView
        android:id="@+id/message_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/current_notification_text"
        android:text="@string/message" />

</RelativeLayout>