<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.ute.culturaltip.activity.MainActivity">

    <Button
        android:id="@+id/show_notification_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/show_map_btn"
        android:layout_alignBottom="@+id/show_map_btn"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/notification" />

    <Button
        android:id="@+id/show_map_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/position_text"
        android:layout_marginTop="14dp"
        android:text="@string/show_map" />

    <TextView
        android:id="@+id/position_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="19dp"
        android:text="@string/empty_text" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_alignBottom="@+id/position_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="My current position:" />

    <fragment
        android:id="@+id/friends_list"
        android:name="pl.ute.culturaltip.fragment.DefaultListFragment"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_above="@+id/add_friend_btn"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/add_friend_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/add_friend" />

    <Button
        android:id="@+id/remove_friend_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/remove_friend" />

</RelativeLayout>
